Remove paths from actions

--- a/.github/workflows/bowling_ruby.yml
+++ b/.github/workflows/bowling_ruby.yml
@@ -1,11 +1,5 @@
 name: Test
-on: 
-  push:
-    paths:
-      - './bowling/ruby/**'
-  pull_request:
-    paths:
-      - './bowling/ruby/**'  
+on: [push, pull_request]
 jobs:
   rspec:
     runs-on: ubuntu-latest
