--- a/.github/workflows/bowling_ruby.yml
+++ b/.github/workflows/bowling_ruby.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Clean Code - Bowling(ruby) 
 on: [push, pull_request]
 jobs:
   rspec:
@@ -12,6 +12,8 @@ jobs:
         with:
           ruby-version: '3.3'
           bundler-cache: true
+      - run: bundle install
       - run: bundle exec rspec
+         
       
     
