--- a/.github/workflows/bowling_ruby.yml
+++ b/.github/workflows/bowling_ruby.yml
@@ -1,7 +1,13 @@
 name: Clean Code - Bowling(ruby) 
-on: [push, pull_request]
+on:
+  push:
+    paths:
+    - 'bowling/ruby/**'
+  pull_request:
+    paths:
+    - 'bowling/ruby/**'
 jobs:
-  rspec:
+  verify:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -12,8 +18,11 @@ jobs:
         with:
           ruby-version: '3.3'
           bundler-cache: true
-      - run: bundle install
-      - run: bundle exec rspec
-         
-      
-    
+      - name: Bundle
+        run: bundle install
+      - name: RSpec
+        run: bundle exec rspec
+      - name: Reek
+        run: bundle exec reek
+      - name: Rubocop
+        run: bundle exec rubocop
