--- a/.github/workflows/bowling_ruby.yml
+++ b/.github/workflows/bowling_ruby.yml
@@ -24,6 +24,6 @@ jobs:
       - name: RSpec
         run: bundle exec rspec
       - name: Reek
-        run: bundle exec reek -c ./.reek.yml
+        run: bundle exec reek -c ./.reek_dummy.yml
       - name: Rubocop
         run: bundle exec rubocop
