--- a/.github/workflows/bowling_ruby.yml
+++ b/.github/workflows/bowling_ruby.yml
@@ -3,6 +3,10 @@ on:
   push:
     paths:
     - 'bowling/ruby/**'
+    branches: [main]
+  pull_request:
+    paths:
+    - 'bowling/ruby/**'
 jobs:
   verify:
     runs-on: ubuntu-latest
@@ -20,6 +24,6 @@ jobs:
       - name: RSpec
         run: bundle exec rspec
       - name: Reek
-        run: bundle exec reek ./** -c ./.reek.yml -V
+        run: bundle exec reek -c ./.reek_dummy.yml
       - name: Rubocop
         run: bundle exec rubocop
