Github workflow - run rubocop even if reek failed

--- a/.github/workflows/bowling_ruby.yml
+++ b/.github/workflows/bowling_ruby.yml
@@ -23,3 +23,4 @@ jobs:
         run: bundle exec reek ./** -c ./.reek.yml -V
       - name: Rubocop
         run: bundle exec rubocop
+        if: ${{ !cancelled() }}
