--- a/.github/workflows/bowling_ruby.yml
+++ b/.github/workflows/bowling_ruby.yml
@@ -18,35 +18,16 @@ jobs:
       - name: Bundle
         run: bundle install
       - name: RSpec
-        run: bundle exec rspec
+        run: | 
+          bundle exec rspec
+          echo "coverage=$(jq '.result.line' ./coverage/.last_run.json)" >> "$GITHUB_OUTPUT"
       - name: Coverage
         uses: actions/github-script@v7
-        with:
-          script: |
-            const fs = require('fs');
-            // Function to read the JSON file and process the 'result.line'
-            function checkCoverage() {
-                fs.readFile('./coverage/.last_run.json', 'utf8', (err, data) => {
-                    if (err) {
-                        console.error('Error reading the file:', err);
-                        return;
-                    }
-
-                    try {
-                        const jsonData = JSON.parse(data);
-                        const lineCoverage = parseFloat(jsonData.result.line);
-
-                        if (lineCoverage < 90.0) {
-                            core.setFailed(`Coverage ${lineCoverage} is less than 90%`);
-                        } else {
-                            console.log(`Coverage is satisfactory: ${lineCoverage}%`);
-                        }
-                    } catch (parseErr) {
-                        console.error('Error parsing JSON:', parseErr);
-                    }
-                });
-            }
-            checkCoverage();
+          with:
+            script: |
+              console.log(context)
+              console.log(steps)
+        if: ${{ !cancelled() }}        
       - name: Reek
         run: bundle exec reek ./** -c ./.reek.yml -V
         if: ${{ !cancelled() }}
