--- a/.github/workflows/bowling_ruby.yml
+++ b/.github/workflows/bowling_ruby.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Bundle
         run: bundle install
       - name: RSpec
+        id: rspec
         run: | 
           bundle exec rspec
           echo "coverage=$(jq '.result.line' ./coverage/.last_run.json)" >> "$GITHUB_OUTPUT"
@@ -25,8 +26,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            console.log(context)
-            console.log(steps)
+            core.info(`${{steps.rspec.coverage}}`)
         if: ${{ !cancelled() }}        
       - name: Reek
         run: bundle exec reek ./** -c ./.reek.yml -V
