--- a/.github/workflows/bowling_ruby.yml
+++ b/.github/workflows/bowling_ruby.yml
@@ -24,9 +24,11 @@ jobs:
           echo "coverage=$(jq '.result.line' ./coverage/.last_run.json)" >> "$GITHUB_OUTPUT"
       - name: Coverage
         uses: actions/github-script@v7
+        env:
+          COVERAGE: ${{steps.rspec.coverage}}
         with:
           script: |
-            core.info(`${{steps.rspec.coverage}}`)
+            console.log(process.env.COVERAGE)
         if: ${{ !cancelled() }}        
       - name: Reek
         run: bundle exec reek ./** -c ./.reek.yml -V
