--- a/.github/workflows/bowling_ruby.yml
+++ b/.github/workflows/bowling_ruby.yml
@@ -25,8 +25,9 @@ jobs:
       - name: Coverage
         uses: actions/github-script@v7
         env:
-          COVERAGE: ${{steps.rspec.coverage}}
+          COVERAGE: ${{steps.rspec.outputs.coverage}}
         with:
+          debug: true
           script: |
             console.log(process.env.COVERAGE)
         if: ${{ !cancelled() }}        
