--- a/.github/workflows/bowling_ruby.yml
+++ b/.github/workflows/bowling_ruby.yml
@@ -29,7 +29,15 @@ jobs:
         with:
           debug: true
           script: |
-            console.log(process.env.COVERAGE)
+            const lineCoverage = parseFloat(process.env.COVERAGE);
+
+            if (isNaN(lineCoverage)) {
+                core.setFailed('Invalid coverage value');
+            } else if (lineCoverage < 90) {
+                core.setFailed(`Coverage ${lineCoverage}% is less than 90%`);
+            } else {
+                core.info(`Coverage is satisfactory: ${lineCoverage}%`);
+            }        
         if: ${{ !cancelled() }}        
       - name: Reek
         run: bundle exec reek ./** -c ./.reek.yml -V
